--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
 - sudo up upgrade
 deploy:
   provider: script
-  script: cd up && up
+  script: up -C up
   on:
     branch: master
