Another silly test to try work out what Travis is not deploying my up function

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
 - sudo up upgrade
 deploy:
   provider: script
-  script: cd up && up -v
+  script: cd up && echo $(date) && up -v
   on:
     branch: master
