--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_install:
 - curl -sf https://up.apex.sh/install | sudo sh
 - sudo up upgrade
 deploy:
-  provider: script
-  script: cd up && echo $(date) && up -v
-  on:
-    branch: master
+    - provider: script
+      skip_cleanup: true
+      script: cd up && echo $(date) && up -v
+      on:
+        branch: master
